deps/crates/vendor/seq-macro/tests/ui/compile-error-span.rs
use seq_macro::seq;

seq!(N in 0..4 {
    compile_error!(concat!("error number ", stringify!(N)));
});

fn main() {}
